Fix number too close to button wall

--- a/style.css
+++ b/style.css
@@ -54,6 +54,7 @@ body {
   font-size: 30px;
   width: 80px;
   height: 80px;
+  padding: 20px;
   border: 20px;
   border-radius: 30px;
   background-color: rgb(80, 76, 76);
